# GENO-MAP_Correspondence-Free-Diagnostics-for-Sweet-Potato-Diversity-Maps

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: agents.md  explainer-es.md
docs/addr/: 0001-descarga-cip-dataverse.md  0002-duplicado-lowdensity-wild-snp.md  0003-missingness-estructurada-mnar.md  0004-sentinels-genomicos.md  0005-validacion-visual-baseline.md  0006-comparacion-ae-vs-baseline.md  0007-cierre-level1-autoencoder.md  0008-level-a-frontera-estabilidad.md  README.md
docs/addr/ideas/: scale.md
docs/code_analysis/: DATA_CATALOG.md  EDA_VARIABLES.md
docs/memoria/: poster_v3.md  poster_v4.md  poster_v5.md  short_paper_v1.md  short_paper_v2.md
docs/memoria/camera-ready/: beamerthemeGENOMAP.sty  refs.bib
docs/poster/: poster_a1.tex
docs/roadmap/: scale.md
experiments/: README.md
notebooks/: ae_vs_baseline.ipynb  data_catalog.ipynb  eda_variables.ipynb  revision_datasets.ipynb  visual_diagnostics.ipynb
scripts/: build_embeddings.py  ensemble_embeddings.py  generate_poster_figures.py  gpu_utils.py  load_dart.py  panel_diagnostics.py  plot_results.py  robustness_curves.py  run_autoencoder.py  run_experiments.py  run_global_silico.sh  run_global_snp.sh  run_lowdensity_silico.sh  run_lowdensity_snp.sh  run_stability_frontier.py  run_transformer.py  run_wild_snp.sh  train_autoencoder.py  train_transformer.py  validate_embeddings.py
