[project]
name = "oxor-genomics"
version = "0.1.0"
description = "Embeddings y grafos kNN para genotipos DArT/DArTSeq andinos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "scikit-learn>=1.3.0",
  "umap-learn>=0.5.5"
]

[tool.uv]
dev-dependencies = []
